# app/model/user.py
@@ -27,11 +27,11 @@ class User:
     @staticmethod
     def create_for_registration(
         password: str,
-        first_name: str = None,
-        second_name: str = None,
-        birthdate: date = None,
-        biography: str = None,
-        city: str = None,
+        first_name: str,
+        second_name: str,
+        birthdate: date,
+        biography: str,
+        city: str,
     ) -> "User":
         """
         Статический метод для создания пользователя при регистрации
@@ -60,18 +60,6 @@ class User:
             city=city,
             password=password,
         )
-
-    def to_dict(self) -> dict:
-        """Преобразует пользователя в словарь (без пароля)"""
-        return {
-            "id": self.id,
-            "first_name": self.first_name,
-            "second_name": self.second_name,
-            "birthdate": self.birthdate,
-            "biography": self.biography,
-            "city": self.city,
-            "password": self.password,
-        }
 
     def __repr__(self) -> str:
         return f"User(id='{self.id}', name='{self.first_name} {self.second_name}')"
